Botão para selecionar área funcionando e registro de nova área funcionando mesmo que o usuário já tenha área cadastrada

--- a/Arduino/aquisicao_node/package.json
+++ b/Arduino/aquisicao_node/package.json
@@ -6,8 +6,9 @@
     "start": "node insert-banco.js"
   },
   "dependencies": {
-    "serialport": "~7.1.5",
+    "bindings": "^1.5.0",
     "events": "~3.0.0",
-    "mssql": "~5.1.0"
+    "mssql": "~5.1.0",
+    "serialport": "~7.1.5"
   }
 }
